<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grizzly Maps</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Grizzly Maps</string>
    <string name="area_map">Area Map</string>
    <string name="campus_map">Campus Map</string>
    <string name="about_button">About…</string>
    <string name="created_by">Created By</string>
    <string name="class_info">ITEC 4550 - Spring 2015</string>
    <string name="creator_name">Aida Syrkett</string>
    <string name="creator_info">Aida likes coding, reading, and all kinds of media. She graduates May 2015!</string>

</resources>
