<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asyrkett.android.grizzlymaps.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@null" />

    <Button
        android:id="@+id/btnArea"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_orange"
        android:text="@string/area_map" />

    <Button
        android:id="@+id/btnCampus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_orange"
        android:text="@string/campus_map" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCampus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_orange"
        android:text="@string/about_button" />

</RelativeLayout>
